Update project to use Java 17